Fix: Add div row to correct alignment nutritional tables

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,7 +109,7 @@
   border: 0;
   border-radius: 3rem;
   height: 4rem;
-  padding: 0 2rem 0.2rem 3rem;
+  padding: 0 2rem 0.2rem 4rem;
   outline: 0;
   margin-top: 3rem;
 }
